--- a/Simulations_MAMS.qmd
+++ b/Simulations_MAMS.qmd
@@ -324,7 +324,7 @@ total_N <- numeric(length(n_list))
 for(j in seq_along(n_list)){
   n <- n_list[[j]]
   
-  sims <- mams_replicates(mu = c(0, 0, 0, 0, 0), sd = 1, n = n, nrep = 100)
+  sims <- mams_replicates(mu = c(0, 0, 0, 0, 0), sd = 0.3, n = n, nrep = 1000)
   
   type1[j] <- mean(!is.na(sims$results$effective_treatment))
   total_N[j] <- sum(n)
@@ -355,14 +355,6 @@ for(i in 1:length(effects)){
 power_est
 
 plot(effects, power_est, type = 'l', main = "Power estimates when only one treatment is effective",  xlab = "True effect size of treatment 1")
-
-```
-
-```{r}
-design_grid <- expand.grid(
-  n_stages = c(2, 3),
-  n_perstage = c(60, 40)
-)
 
 ```
 
@@ -490,6 +482,54 @@ mams_ef <- function(l, u, sd = 1, n, mu, r = 1, silent = TRUE){
 }
 ```
 
+### Triangular boundaries 
+
+```{r}
+n = rep(24,4)
+
+
+J <- length(n) # number of stages
+K <- length(mu) - 1 # number of treatment arms i.e. number of hypothesis tests
+
+B <- numeric(length = J)
+  
+  # indices for control and active experimental treatments
+  control_id <- 1
+  active_id <- 2:length(mu)
+  
+  # initialise list to store data vectors
+  y <- vector("list", length = length(mu))
+
+  # initiliase a running total of overall sample size
+  total_N <- 0
+  
+#--------- loop over stages 
+  for(j in 1:J){
+    #if(silent == FALSE){cat("Stage", j, ". Number of treatments:", length(active_id),"\n")}
+    
+    y[[control_id]] <- c(y[[control_id]], rnorm(n=r*n[j], mean = mu[control_id], sd = sd))
+    
+    for (i in active_id) { # treatment arms 
+      y[[i]] <- c(y[[i]], rnorm(n = n[j], mean = mu[i], sd = sd)) 
+    }
+    
+    # compute Z statistics for each treatment with control and against efficacy boundary
+    Z <- numeric(length(active_id))
+    keep <- logical(length = length(active_id))
+    
+    # compute Z statistics for all treatments 
+    for(k in seq_along(active_id)){ 
+      i <- active_id[k]
+      
+      nT <- sum(n[1:j]) # treatment arm current stage sample size 
+      nC <- r * nT # control arm current stage sample size 
+      Z[k] <- (mean(y[[i]]) - mean(y[[control_id]])) / sqrt(sd^2 * (1/nT + 1/nC))
+    }
+  
+  B[j] <- 
+  }
+```
+
 ## Replication function & Type I error rate
 
 The replication function takes the same arguments as the simulation function `mams_ef` plus an additional argument, `nrep = 1000`. The function produces `nrep` replicates of the trial specified by the other arguments and returns the following values:
@@ -609,6 +649,41 @@ Mu <- cbind(HG, LFC)
 
 mams_hyp(l = c(0, 2.169), u = c(3.068, 2.169), n = rep(42,2), Mu = Mu)
 mams_hyp(bounds = 'obf', n = rep(42,2), Mu = Mu )
+```
+
+## Power
+
+Power calculator function that takes as its arguments:
+
+• result - the result data frame returned after running mams_replicates
+
+• mu - the true treatment effect vector passed to mams_replicates
+
+• delta_1 - the minimum threshold for the clinically relevant treatment difference
+
+```{r}
+power <- function(result, mu, delta_1, type = "any"){
+  #any-pair power: probability of any effective treatment being recommended
+  
+  # indices of treatments with a relevant treatment effect
+  if(type == "any"){
+    correct <- which(mu > delta_1)-1
+  }
+  if(type == "LFC"){
+    correct <- which.max(mu) - 1 #### revise this
+  }
+  power_a <- mean(!is.na(result$effective_treatment) & 
+         result$effective_treatment %in% correct)
+  
+  return(power_a)
+}
+```
+
+```{r}
+LFC <- c(0, 0.545,0.178,0.178, 0.178)
+results <- mams_replicates2(l = c(0, 0, 2.182), u = c(3.779, 2.672, 2.182), n = rep(30,3), mu = LFC)$results
+
+power_any(results, mu = LFC, delta_1 = 0.5)
 ```
 
 ### Reproducing results from Wason & Jaki (2011) - TAILoR trial
@@ -773,7 +848,8 @@ ldBounds(t = cumsum(n)/sum(n), alpha = 0.05/3 , sides = 1, iuse = 1)
 ```
 
 ```{r}
-n <- c(470, 456, 396)
+#n <- c(402,452,1033)
+n = c(261, 253, 220)
 r <- 2
 l <- c(0, 0, 02.1608)
 u <- c(3.8484, 2.6348, 2.1608)
@@ -785,9 +861,10 @@ mams_replicates2(l = l, u = u, mu = c(0,0.05,0.01,0.01), n = n, sd = 0.33, r = r
 LFC <- c(0, 0.05, 0.01, 0.01, 0.01, 0.01, 0.01, 0.01)
 HG <- c(rep(0,8))
 Mu <- cbind(HG, LFC)
+n <- c(402,452,1033)
+#n = c(261, 253, 220)
 
-
-threestage <- mams_hyp(l = c(0, 0, 2.182), u = c(3.779, 2.672, 2.182), r = 2, sd = 0.33, n = c(261, 253, 220), Mu = Mu)
+threestage <- mams_hyp(l = c(0, 0, 2.182), u = c(3.779, 2.672, 2.182), r = 2, sd = 0.33, n = n, Mu = Mu)
 
 results <- threestage$ESS#rbind(twostage$ESS, threestage$ESS, fourstage$ESS)
 #rownames(results) <- c("2stage", "3stage", "4stage")
