--- a/Simulations_MAMS.qmd
+++ b/Simulations_MAMS.qmd
@@ -719,8 +719,8 @@ mams_hyp(bounds = 'obf', n = rep(42,2), delta_1 = 0.545, Mu = Mu )
 ```{r}
 boundary_plotter <- function(l, u){
   x = seq(1, length(u))
-  ymax = ceiling(u[1])
-  ymin = floor(l[1])
+  ymax = ceiling(max(u))
+  ymin = floor(min(l))
   
   plot(x = x, y = u, type = 'b', ylim = c(ymin, ymax), xaxt = 'n',
        xlab = "Interim analysis", ylab = "Z-statistic", main = "Stopping bounds")
@@ -741,7 +741,7 @@ boundary_plotter(l = c(0, 0, 2.182), u = c(3.779, 2.672, 2.182))
 #boundary_plotter(u = c(4.375, 3.094, 2.526, 2.188), l = c(0, 0, 0, 2.1875))
 ```
 
-### Reproducing results from Wason & Jaki (2011) - TAILoR trial
+# Reproducing results from Wason & Jaki (2011) - TAILoR trial
 
 Using the simulation and replication functions above, ESS are estimated for the following scenarios:
 
@@ -768,30 +768,13 @@ rownames(results) <- c("2stage", "3stage", "4stage")
 type1rates <- c(twostage$TypeI, threestage$TypeI, fourstage$TypeI)
 
 results
+
+boundary_plotter(l = threestage$bounds[[1]], u = threestage$bounds[[2]])
 ```
 
-```{r}
-# try with my Lan-DeMetz boundaries
-LFC <- c(0, 0.545,0.178,0.178, 0.178)
-HG <- c(rep(0,5))
-Mu <- cbind(HG, LFC)
-
-twostage <- mams_hyp(l = c(0, 2.2457), u = c(3.3446, 2.2457), n = rep(42,2), Mu = Mu)
-
-threestage <- mams_hyp(l = c(0, 0, 2.2637), u = c(4.1708, 2.8458, 2.2637), n = rep(30,3), Mu = Mu)
-
-fourstage <- mams_hyp(l = c(0, 0, 0, 2.2812), u = c(4.8599, 3.3447, 2.6702, 2.2812), n = rep(24,4), Mu = Mu)
-
-results <- rbind(twostage$ESS, threestage$ESS, fourstage$ESS)
-rownames(results) <- c("2stage", "3stage", "4stage")
-
-type1rates <- c(twostage$TypeI, threestage$TypeI, fourstage$TypeI)
-
-results
-```
+Run the same design characteristics through but with OBF-style Lan-DeMetz bounds produces by my function:
 
 ```{r}
-# try with my Lan-DeMetz boundaries
 LFC <- c(0, 0.545,0.178,0.178, 0.178)
 HG <- c(rep(0,5))
 Mu <- cbind(HG, LFC)
@@ -851,7 +834,7 @@ axis(side = 1, at = 1:3, labels = c("Two", "Three", "Four"))
 abline(h = 0.05, lty = 2)
 ```
 
-### \*Application to ROSSINI-2 trial
+# Application to ROSSINI-2 trial
 
 • 4 stages (including internal pilot) - 2 interim + 1 final analysis (3 stages excluding pilot)
 
@@ -859,19 +842,22 @@ abline(h = 0.05, lty = 2)
 
 Actual trial places restrictions on how many arms can progress after each interim (pre-specified MAMS design) - for the purposes of this project this restriction will be lifted and the trial will be considered a full MAMS design
 
+### Find $\delta_0$ for ROSSINI-2
+
 ```{r}
 n <- c(201, 226, 517)
 ldBounds(t = cumsum(n)/sum(n), alpha = 0.05/7 , sides = 1, iuse = 1)
 ```
 
 ```{r}
-effects <- seq(0, 0.1, 0.01) #c(0.2,0.3,0.4,0.5)
+effects <- seq(0, 0.05, 0.005)  #seq(0, 0.1, 0.01) 
 n <- c(201, 226, 517)
 power_est <- numeric(length = length(effects))
 
 l <- c(0, 0, 5.7131)
 u <- c(2.4511, 3.8330, 5.7131)
 
+boundary_plotter(l, u)
 
 for(i in 1:length(effects)){
   mu = c(0, 0.05, rep(effects[i],6)) # treatment 1 ihas target diff, others have delta_0
@@ -881,9 +867,9 @@ for(i in 1:length(effects)){
   power_est[i] <- mean(res$results$effective_treatment == 1, na.rm = TRUE)
 }
 
-plot(effects, power_est, type = 'l', main = "LFC Power for delta1 = 0.05 against delta0 candidates",  xlab = "delta0 candidates")
+plot(effects, power_est, type = 'l', main = "LFC Power for delta1 = 0.05 against delta0 candidates",  xlab = "delta0 candidates", ylab = "LFC Power")
 abline(h = 0.5, lty = 2, col = 'gray')
-abline(v = 0.03, lty = 2, col = 'gray')
+abline(v = 0.029, lty = 2, col = 'gray')
 ```
 
 ```{r}
@@ -900,17 +886,26 @@ mams_hyp(l = l, u = u, Mu = mu, n = n, sd = 0.3, r = r, delta_1 = 0.05)
 ```{r}
 LFC <- c(0, 0.05, 0.03, 0.03, 0.03, 0.03, 0.03, 0.03)
 HG <- c(rep(0,8))
-multiple <- c(0, 0.05, 0.05, 0.05, 0.01, 0.01, 0.01, 0.01)
+multiple <- c(0, 0.05, 0.04, 0.04, 0, 0, 0, 0)
 Mu <- cbind(HG, LFC, multiple)
 #n <- c(402,452,1033)
 #n = c(261, 253, 220)
 n = c(201, 226, 517)
 
-results <- mams_hyp(bounds = 'obf', r = 2, sd = 0.33, n = n, delta_1 = 0.05, Mu = Mu)
+obf_1 <- mams_hyp(bounds = 'obf_one', r = 2, sd = 0.33, n = n, delta_1 = 0.05, Mu = Mu)
 
-results
+obf_2 <- mams_hyp(bounds = 'obf', r = 2, sd = 0.33, n = n, delta_1 = 0.05, Mu = Mu)
+
+ESS <- rbind(obf_1$ESS, obf_2$ESS)
+rownames(ESS) <- c("one-sided", "two-sided")
+ESS
+
 #boundary_plotter(results$bounds[[1]], results$bounds[[2]])
 ```
+
+### Sensitivity analysis
+
+## 
 
 ## \*Grid search over trial parameters
 
